# worldcup-2026

./: .env.example  .gitignore  CLAUDE.md
.claude/skills/ship-it/: SKILL.md
.github/workflows/: deploy.yml  update-matches.yml
data/output/: players.csv  players.json  summary.json
docs/superpowers/plans/: 2026-07-06-player-origins-map.md  2026-07-07-clubs-view.md
docs/superpowers/specs/: 2026-07-06-bracket-view-design.md  2026-07-06-player-origins-map-design.md  2026-07-07-clubs-view-design.md
pipeline/: pyproject.toml
pipeline/src/worldcup/: config.py  run_pipeline.py
pipeline/src/worldcup/contracts/: player.py
pipeline/src/worldcup/extract/: wikidata.py  wikipedia.py
pipeline/src/worldcup/transform/: build_dataset.py
pipeline/tests/: test_wikidata_clubs.py
scripts/: update_matches.py
web/: next.config.ts  package-lock.json  package.json  vitest.config.ts
web/public/data/: matches.json  players.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: BottomSheet.tsx  BracketLayer.tsx  BracketPanel.tsx  ClubCombobox.tsx  ClubDetail.tsx  ClubLayer.tsx  ColorLegend.tsx  CountryDetail.tsx  DeckGLOverlay.tsx  DiasporaLayer.tsx  FactoriesLayer.tsx  FilterPanel.tsx  MapTooltip.tsx  MapView.tsx  MatchCard.tsx  PlayerCard.tsx  RoundSelector.tsx  SidePanel.tsx  SquadLayer.tsx  TeamSelector.tsx  TeamSummary.tsx  ViewSwitcher.tsx
web/src/lib/: bracket.ts  colors.ts  data.ts  geo.ts  types.ts
web/tests/lib/: colors.test.ts  data.test.ts  geo.test.ts
