[project]
name = "worldcup-2026"
version = "0.1.0"
description = "2026 FIFA World Cup player data pipeline"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28",
    "polars>=1.30",
    "beautifulsoup4>=4.13",
    "lxml>=5.4",
    "truststore>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worldcup"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
